# Entitas-CSharp

App.Server/: AllocationClient.cs  App.Server.csproj  CMakeLists.txt  HallRoom.cs  HallServerNetwork.cs  LoginServer.cs  PlayerNetworkMonitor.cs  RoomId.cs  SendSnapshotManager.cs  ServerDebugCommandHandler.cs  ServerRoom.cs  ServerRoomEvent.cs  ServerRoomExt.cs  ServerRoomFactory.cs  ServerSessionStateMachine.cs  ServerSessionStateMachineMonitor.cs  ServerSessionStateProgress.cs  ServerStatusCollectUtil.cs  SingleRoomManager.cs  cmake_install.cmake
App.Server/Bullet/: ServerBulletInfoCollector.cs
App.Server/Common/: ServerRuntimeGameConfig.cs
App.Server/Damage/: ServerDamageInfoCollector.cs
App.Server/FileSystemConfig/: ServerFileSystemConfigManager.cs
App.Server/GameModules/: TopLevelServerGameModule.cs
App.Server/MessageHandler/: AbstractServerMessageHandler.cs  DebugMessageHandler.cs  DebugScriptInfoMessageHandler.cs  FireInfoMessageHandler.cs  FreeEventMessageHandler.cs  IPlayerEntityDic.cs  PingReqMessageHandler.cs  ServerGameOverMessageHandler.cs  SimulationTimeServerSyncHandler.cs  TriggerObejctEventMessageHandler.cs  UserCmdMessageHandler.cs  UserUpdateAckMsgHandler.cs  UserUpdateMsgHandler.cs  VehicleCmdMessageHandler.cs  VehicleEventMessageHandler.cs
App.Server/Robot/: RobotFakeNetworkChannel.cs  RobotsManager.cs
App.Server/SceneManagement/: ServerScenePostprocessor.cs
App.Server/StatisticData/: BaseGameStatisticData.cs  GroupGameStatisticData.cs  IGameStatisticData.cs  SurvivalGameStatisticData.cs
App.Shared/: App.Shared.EntitasCodeGen.csproj  App.Shared.csproj  AssetConfig.cs  CMakeLists.txt  ClientWeaponConfigInitSystem.cs  EEntityType.cs  ENetworkMessages.cs  Log4ConfigManager.cs  MyHttpServer.cs  RpcMessageType.cs  SharedConfig.cs  TestUtility.cs  cmake_install.cmake
App.Shared/Cam/: CameraFactory.cs
App.Shared/Client/: IClientRoom.cs  LoginClient.cs
App.Shared/CommonResource/: CommonResourcesManager.cs  ECommonResourceType.cs  ICommonResourceUpdate.cs
App.Shared/Configuration/: FileSystemConfigLoader.cs  IOperationAfterConfigLoaded.cs  MapConfigManager.cs  MapsDescription.cs  StreamingLevelStructure.cs
App.Shared/DebugHandle/: BigMapDebug.cs  DebugCommands.cs  GameSettingUtility.cs  SharedCommandHandler.cs  VehicleDebugUtility.cs
App.Shared/DebugSystem/: AbstractDebugInfoSystem.cs  MapObjectDebugInfoSystem.cs  RigidbodyDebugInfoSystem.cs  RigidbodyDebugSystem.cs  ServerDebugInfo.cs  ServerDebugInfoSystem.cs
App.Shared/Editor/: CMakeLists.txt  ExitPlayModeOnScriptCompile.cs
App.Shared/EntityFactory/: BulletEntityFactory.cs  ClientEffectFactory.cs  ClientMapObjectEntityFactory.cs  ClientSceneObjectEntityFactory.cs  PlayerEntityFactory.cs  ServerMapObjectEntityFactory.cs  ServerSceneObjectEntityFactory.cs  ServerSoundEntityFactory.cs  SoundEntityFactory.cs  ThrowingEntityFactory.cs  WeaponEntityFactory.cs
App.Shared/Extend/: GameModuleLogicManagement.cs  PlayerAgentManagent.cs  PlayerEntityC4BagEx.cs  PlayerEntityWeaponExt.cs  WeaponInfoEx.cs
App.Shared/GameContexts/: BulletGameContext.cs  ClientEffectGameContext.cs  FreeMoveGameContext.cs  GameContextsUtility.cs  MapObjectGameContext.cs  PlayerGameContext.cs  SceneObjectGameContext.cs  SoundGameContext.cs  ThrowingGameContext.cs  VehicleGameContext.cs  WeaponGameContext.cs
App.Shared/GameInputFilter/: DummyFilteredInput.cs  FilteredInput.cs  GameInputProcessor.cs  GameState.cs  GameStateProcessFactory.cs  PlayerStateAdapter..cs  PlayerStateMatrix.cs  StatePool.cs  StateProvider.cs  StateProviderPool.cs  UserCommandMapper.cs
App.Shared/GameModules/: ClientMainFeature.cs  ClientPreLoginFeature.cs  ClientPreparePlayerMainFeature.cs  ServerMainFeature.cs  ServerPrepareFeature.cs  ServerSpecialZoneEventSystem.cs  UseCmdEexcuteDebugSystem.cs  UserCmdGameModule.cs
App.Shared/Network/: AppMessageTypeInfo.cs  RpcNetworkMessage.cs
App.Shared/Player/: PlayerEntityAnimationEx.cs  PlayerEntityEx.cs  PlayerInfoExtensions.cs  PlayerStateUtil.cs
App.Shared/Room/: RoomInfoEx.cs
App.Shared/SceneManagement/: DynamicScenesController.cs  ISceneManagementEvent.cs  ISceneResourceManager.cs  ISceneResourceRequestHandler.cs  IUpdatePositionRelatedEffect.cs  LevelController.cs  LevelManager.cs  PositionRelatedEffectUpdater.cs  SceneAbstractController.cs  SceneDebugger.cs
App.Shared/SceneTriggerObject/: TriggerObjectManager.cs
App.Shared/SessionStates/: IAssetInfoProvider.cs  PreLoadAssetProvider.cs  PreLoadState.cs
App.Shared/Sound/: ClientVehicleSoundManager.cs  PlayerSoundManager.cs  SoundConverter.cs  SoundPlayerEntityAdapter.cs  SoundSyncUtil.cs  TerrainSoundManager.cs
App.Shared/Terrains/: IMyTerrain.cs  MyTerrain.cs  TerrainCommonData.cs  TerrainEffectItem.cs  (+2 more)
Core/: CMakeLists.txt  Core.csproj  EnumEntityType.cs  GlobalSuppressions.cs  cmake_install.cmake  log4net.xml  packages.config
(+1936 files in other folders)
